--- a/index.html
+++ b/index.html
@@ -27,27 +27,39 @@ height="350"></p>
 <h3>Posts</h3>
 <ul id="posts">
     <li>
-        <a href="https://tomazgda.github.io/rust/markdown-syntax/">
-            Markdown Syntax Guide
-            <small><time>Mar 11, 2019</time></small>
+        <a href="https://tomazgda.github.io/python/for_loops/">
+            For_loops
+            <small><time>Mar 4, 2021</time></small>
         </a>
     </li>
     <li>
-        <a href="https://tomazgda.github.io/rust/rich-content/">
-            Rich Content
-            <small><time>Mar 10, 2019</time></small>
+        <a href="https://tomazgda.github.io/python/extension_exercises/">
+            Extension_exercises
+            <small><time>Mar 1, 2021</time></small>
         </a>
     </li>
     <li>
-        <a href="https://tomazgda.github.io/rust/placeholder-text/">
-            Placeholder Text
-            <small><time>Mar 9, 2019</time></small>
+        <a href="https://tomazgda.github.io/python/rock_paper_scissors/">
+            Rock_paper_scissors
+            <small><time>Feb 25, 2021</time></small>
         </a>
     </li>
     <li>
-        <a href="https://tomazgda.github.io/rust/emoji-support/">
-            Emoji Support
-            <small><time>Mar 5, 2019</time></small>
+        <a href="https://tomazgda.github.io/python/quiz/">
+            Quiz
+            <small><time>Feb 20, 2021</time></small>
+        </a>
+    </li>
+    <li>
+        <a href="https://tomazgda.github.io/python/exercises/">
+            Exercises
+            <small><time>Feb 10, 2021</time></small>
+        </a>
+    </li>
+    <li>
+        <a href="https://tomazgda.github.io/python/hello_world/">
+            Hello_world
+            <small><time>Feb 4, 2021</time></small>
         </a>
     </li>
 </ul>
