--- a/python/hello_world/index.html
+++ b/python/hello_world/index.html
@@ -28,7 +28,7 @@
 </article>
 
         </main><footer id="footer">
-    Copyright © 2021 Tomaz GdA
+    Made by, Tomaz GdA 2021
 </footer>
 </body>
 </html>
