--- a/python/rock_paper_scissors/index.html
+++ b/python/rock_paper_scissors/index.html
@@ -146,7 +146,7 @@
 </code></pre></div></article>
 
         </main><footer id="footer">
-    Copyright © 2021 Tomaz GdA
+    Made by, Tomaz GdA 2021
 </footer>
 </body>
 </html>
