--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ height="350"></p>
 </ul>
 
         </main><footer id="footer">
-    Copyright © 2021 Tomaz GdA
+    Made by, Tomaz GdA 2021
 </footer>
 </body>
 </html>
