--- a/python/extension_exercises/index.html
+++ b/python/extension_exercises/index.html
@@ -21,7 +21,8 @@
 <main id="content">
 <article>
     <header id="post-header">
-        <h1>Extension_exercises</h1><time>March 1, 2021</time></header><h4 id="creating-a-program-which-asks-the-user-to-type-in-a-sport"><em>Creating a program which asks the user to type in a sport.</em></h4>
+        <h1>Extension_exercises</h1><time>March 1, 2021</time></header><iframe src="https://trinket.io/embed/python3/97b7a34d5c" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<h4 id="creating-a-program-which-asks-the-user-to-type-in-a-sport"><em>Creating a program which asks the user to type in a sport.</em></h4>
 <ol>
 <li>Assign this value to a variable called sport.</li>
 <li>If the sport is football, output “The beautiful game”</li>
