--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 <main id="content">
 <h1 id="tomaz-gda">Tomaz GdA</h1>
-<p><img src="/iu-3.jpeg" alt="Simply Easy Learning" width="1000"
+<p><img src="/iu-3.jpeg" alt="MandleBrot Set" width="1000"
 height="350"></p>
 <h3>Posts</h3>
 <ul id="posts">
