--- a/python/extension_exercises/index.html
+++ b/python/extension_exercises/index.html
@@ -94,7 +94,7 @@
     <span class="k">print</span><span class="p">(</span><span class="s2">&#34;We don&#39;t trade this currency&#34;</span><span class="p">)</span>
 
 
-<span class="k">print</span><span class="p">(</span><span class="s2">&#34;YOUR NEW BALANCE IS: &#34;</span><span class="p">,</span> <span class="n">poundValue</span> <span class="o">*</span> <span class="n">op</span><span class="p">)</span>
+<span class="k">print</span><span class="p">(</span><span class="s2">&#34;YOUR NEW BALANCE IS: &#34;</span><span class="p">,</span> <span class="n">poundValue</span> <span class="o">*</span> <span class="n">op</span><span class="p">,</span> <span class="n">currency</span><span class="p">)</span>
 
 </code></pre></div></article>
 
