--- a/python/rock_paper_scissors/index.html
+++ b/python/rock_paper_scissors/index.html
@@ -103,12 +103,12 @@
     <span class="k">elif</span> <span class="n">usrInput</span> <span class="o">==</span> <span class="s2">&#34;P&#34;</span> <span class="ow">and</span> <span class="n">comInput</span> <span class="o">==</span> <span class="s2">&#34;S&#34;</span><span class="p">:</span>
       <span class="n">paper</span><span class="p">()</span>
       <span class="n">scissors</span><span class="p">()</span>
-      <span class="k">print</span><span class="p">(</span><span class="s2">&#34;player loose&#34;</span><span class="p">)</span>
+      <span class="k">print</span><span class="p">(</span><span class="s2">&#34;player lose&#34;</span><span class="p">)</span>
       <span class="n">comScore</span> <span class="o">+=</span> <span class="mi">1</span>
     <span class="k">elif</span> <span class="n">usrInput</span> <span class="o">==</span> <span class="s2">&#34;S&#34;</span> <span class="ow">and</span> <span class="n">comInput</span> <span class="o">==</span> <span class="s2">&#34;R&#34;</span><span class="p">:</span>
       <span class="n">scissors</span><span class="p">()</span>
       <span class="n">rock</span><span class="p">()</span>
-      <span class="k">print</span><span class="p">(</span><span class="s2">&#34;player loose&#34;</span><span class="p">)</span>
+      <span class="k">print</span><span class="p">(</span><span class="s2">&#34;player lose&#34;</span><span class="p">)</span>
       <span class="n">comScore</span> <span class="o">+=</span> <span class="mi">1</span>
     <span class="k">elif</span> <span class="n">usrInput</span> <span class="o">==</span> <span class="s2">&#34;S&#34;</span> <span class="ow">and</span> <span class="n">comInput</span> <span class="o">==</span> <span class="s2">&#34;P&#34;</span><span class="p">:</span>
       <span class="n">scissors</span><span class="p">()</span>
