--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ height="350"></p>
         </a>
     </li>
     <li>
+        <a href="https://tomazgda.github.io/python/validation/">
+            Validation
+            <small><time>Feb 25, 2021</time></small>
+        </a>
+    </li>
+    <li>
         <a href="https://tomazgda.github.io/python/quiz/">
             Quiz
             <small><time>Feb 20, 2021</time></small>
