--- a/python/validation/index.html
+++ b/python/validation/index.html
@@ -21,7 +21,7 @@
 <main id="content">
 <article>
     <header id="post-header">
-        <h1>Validation</h1><time>February 25, 2021</time></header><p>The following code checks the length of the string &lsquo;password&rsquo;. If it is less than six, it will print &ldquo;Invalid&rdquo;.</p>
+        <h1>Validation</h1><time>March 5, 2021</time></header><p>The following code will check the length of the string &lsquo;password&rsquo;. If it is less than six, it will print &ldquo;Invalid&rdquo;.</p>
 <pre><code>    password = “password123”
 
     IF password.length &lt; 6 THEN
